[project]
name = "Controller"
version = "0.0.1"
authors = [
  { name="Galkin Daniil", email="danil.galkin2017@mail.ru" },
]
description = "Пакет для работы с хранимыми процедурами"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'psycopg2-binary',
    'pydantic',
]
[project.urls]
"Homepage" = "https://github.com/DigoErisdar/Controller"