[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FunctionStoredController"
version = '0.0.3'
description = "Контроллер для работы с хранимыми процедурами"
authors = [{name = "DigoErisdar", email = "danil.galkin2017@mail.ru"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Home = "https://github.com/DigoErisdar/Controller"

[tool.flit.module]
name = 'controller'

[tool.poetry.dependencies]
pydantic = "^1.10.3"